flux/apps/ai/llm/catalog/translategemma-4b/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: translategemma-4b-ai
spec:
  parentRefs:
    - name: agenticgateway-internal
      namespace: agenticgateway
      sectionName: https
    - name: agenticgateway-internal
      namespace: agenticgateway
      sectionName: http
  hostnames:
    - ai.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/chat/completions
          headers:
            - type: Exact
              name: X-Gateway-Base-Model-Name
              value: google/translategemma-4b-it
      backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: translategemma-4b-llm
